--- a/app.yaml
+++ b/app.yaml
@@ -5,3 +5,14 @@ service: default
 handlers:
   - url: /.*
     script: auto
+    secure: optional
+
+instance_class: F1 # Frontend - 30s timeout 28hours free quota
+automatic_scaling: 
+  max_instances: 1
+  min_instances: 0
+  max_idle_instances: 1 # default automatic
+  #target_cpu_utilization: .85 # default .6
+
+inbound_services:
+- warmup
