--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "admin-demo",
+  "name": "localm",
   "version": "0.0.1",
-  "description": "Proof of Concept for Admin",
+  "description": "Localm coming soon website",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next -p ${PORT:-3000}",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start -p $PORT",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gcloud --verbosity=debug --project localm-org app deploy app.yaml --no-promote --quiet --version"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digibodies/digibodies-admin-demo.git"
+    "url": "git+https://github.com/blainegarrett/localm-org.git"
   },
   "keywords": [
     "node",
@@ -35,20 +36,17 @@
   "author": "Blaine Garrett <blaine@blainegarrett.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/digibodies/digibodies-admin-demo/issues"
+    "url": "https://github.com/blainegarrett/localm-org/issues"
   },
-  "homepage": "https://github.com/digibodies/digibodies-admin-demo#readme",
+  "homepage": "https://github.com/blainegarrett/localm-org#readme",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
-    "express": "^4.16.4",
-    "isomorphic-unfetch": "^2.1.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "jss": "^9.8.7",
-    "next": "^8.0.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "next": "^10.0.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-jss": "^8.6.1"
   },
   "devDependencies": {
