--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-start": "^1.132.48",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-h5-audio-player": "^3.10.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
