--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource-variable/roboto": "5.2.5",
-    "@mui/material": "6.4.7",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@tanstack/nitro-v2-vite-plugin": "^1.132.40",
     "@tanstack/react-router": "^1.132.47",
     "@tanstack/react-router-devtools": "^1.132.50",
